# databases-pocs

./: .gitignore  README.md
cpp-impl/: CMakeLists.txt  LLVMExecutor.cpp  LLVMExecutor.hpp  README.md  SimpleDbColumn.hpp  SimpleIRBuilder.cpp  SimpleIRBuilder.hpp  SumOperator.cpp  SumOperator.hpp  main.cpp
jvm-impl/: README.md  build.sbt
jvm-impl/src/main/scala/com/simpledb/: CodeGeneration.scala  FileUtil.scala  Main.scala
